[FROM NICOLAS@BNF]
- Defects from review NS-152 fixed.